--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "node index.js",
+    "dev": "concurrently \"npm start\" \"cd client && npm start\"",
     "heroku-postbuild": "cd client && npm install --only=dev && npm install && npm run build",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -12,6 +13,7 @@
   "author": "Rich Jimenez",
   "license": "ISC",
   "dependencies": {
+    "concurrently": "^5.1.0",
     "express": "^4.17.1",
     "password-generator": "^2.2.3"
   }
